<resources>
    <string name="app_name">Card+</string>
    <string name="login">登入</string>
    <string name="reset_login">重新登入</string>
    <string name="finished">完成</string>
    <string name="user_account">使用者帳號</string>
    <string name="user_mima">使用者密碼</string>
    <string name="user_mima_confirm">再次輸入使用者密碼</string>
    <string name="login_immediately">馬上登入</string>
    <string name="mima">密碼</string>
    <string name="dialog_title">訊息</string>
    <string name="progress_dialog_title">訊息</string>
    <string name="loading">Loading...</string>
    <string name="msg_no_available_network">目前無網路連線，請稍候再試。</string>
    <string name="dialog_app_update_button_update">更新</string>
    <string name="button_confirm">確認</string>
    <string name="button_next">下一步</string>
    <string name="button_save">儲存</string>
    <string name="amount_sign">NT$</string>
    <string name="dialog_permission_msg">請開啟%1$s權限。</string>
    <string name="dialog_permission_button_goto_setting">前往</string>
    <string name="dialog_permission_label_parentheses">[%1$s]</string>
    <string name="dialog_permission_label_conjunction_final">與</string>
    <string name="dialog_permission_label_conjunction">、</string>
    <string name="dialog_permission_label_storage">儲存空間</string>
    <string name="dialog_permission_label_camera">相機</string>
    <string name="dialog_permission_label_contacts">聯絡人</string>
    <string name="dialog_permission_label_camera_message">開啟相機</string>
    <string name="dialog_permission_label_storage_message">存取裝置中的相片、媒體和檔案</string>
    <string name="dialog_permission_message_for_remind">「%1$s」將%2$s</string>
    <string name="dialog_permission_label_and">及</string>
    <string name="dialog_permission_button">我暸解了</string>
    <string name="tab_home">首頁</string>
    <string name="tab_statement">帳單</string>
    <string name="tab_payment">繳款</string>
    <string name="tab_installment">消費分期</string>
    <string name="tab_setting">個人化服務</string>
    <string name="personal_service_list_apply_credit_card">加辦信用卡</string>
    <string name="personal_service_list_touch_id">TOUCH ID</string>
    <string name="personal_service_list_account_modify">變更使用者帳號</string>
    <string name="personal_service_list_password_modify">變更密碼</string>
    <string name="personal_service_list_email_modify">變更電子信箱</string>
    <string name="personal_service_list_edit_profile">變更使用者資訊</string>
    <string name="personal_service_list_contact_dbs">聯絡星展</string>
    <string name="personal_service_list_notification_setting">通知訊息設定</string>
    <string name="personal_service_list_phone_modify">變更手機號碼</string>
    <string name="personal_service_list_address_modify">變更通訊地址</string>
    <string name="edit_profile_user_account">使用者帳號</string>
    <string name="edit_profile_user_nickname">使用者暱稱</string>
    <string name="edit_profile_user_email">電子信箱</string>
    <string name="edit_profile_user_phone_number">手機號碼</string>
    <string name="edit_profile_user_address">通訊地址</string>
    <string name="edit_profile_user_password">變更密碼</string>
    <string name="input_new_account">新使用者帳號</string>
    <string name="input_old_password">舊使用者密碼</string>
    <string name="input_new_password">新使用者密碼</string>
    <string name="input_new_password_again">再次輸入新密碼</string>
    <string name="input_new_email">新使用者電子信箱</string>
    <string name="input_new_email_again">再次輸入使用者電子信箱</string>
    <string name="input_new_nickname">修改暱稱</string>
    <string name="input_new_phone">輸入手機號碼</string>
    <string name="input_country_code">國碼</string>
    <string name="change_avatar">更換頭像</string>
    <string name="postal_code">郵遞區號</string>
    <string name="input_new_city">更新縣市</string>
    <string name="input_new_county">更新鄉鎮市區</string>
    <string name="input_new_address">更新地址</string>
    <string name="old_address">目前通訊地址</string>
    <string name="old_account">目前使用者帳號</string>
    <string name="old_email">目前使用者電子信箱</string>
    <string name="old_phone">目前手機號碼</string>
    <string name="taiwan_country_code">+886</string>
    <string name="txt_hint1">點選卡片，馬上申請！</string>
    <string name="txt_hint2">每次申請最多添加3張卡片</string>
    <string name="btn_apply_now">馬上申請</string>
    <string name="default_phone_number">預設手機號碼</string>
    <string name="alert_select_over">您選擇的卡片數量已超過上限</string>
    <string name="touch_id_hint">	• 	提醒您！為維護您的權益，啟用 Touch ID 登入 Lifestyle APP 請先確保您的 Touch ID 設定為您本人所有。</string>
    <string name="account_modify_hint"> •	請輸入6~10 碼英數字。\n
	•	不可為身份證字號或外國人統一證號。\n
	•	不可單純由數字組成。\n
	•	不可設定為相同或連續英文字或數字。\n
	•	不可與密碼相同，不可設定特殊符號或空白。</string>
    <string name="password_modify_hint">	•	請輸入6~30 碼英數字。大小寫不同，不可含3個以上相同或連續隻數字或英文字。\n
	•	不可與使用者帳號相同。\n
	•	不可設定特殊符號或空白。</string>
    <string name="edit_profile_hint">• 使用者暱稱與頭像僅供本應用程序使用。</string>
    <string name="edit_profile_alert">您尚有資料未存檔，是否留在本頁？</string>
    <string name="otp_top_message_phone">簡訊動態密碼 SMS OTP 將發送至</string>
    <string name="otp_top_message_email">電子信箱動態密碼 SMS OTP 將發送至</string>
    <string name="otp_btn_resend"><u>重新寄送 SMS OTP 密碼</u></string>
    <string name="otp_hint_1">提醒您 : 當您未收到本行簡訊動態密碼(SMS OTP)時，請按『重新寄送 SMS OTP 密碼』或建議您可依下列步驟操作 : </string>
    <string name="otp_hint_2">1. 重新開啟手機，並重新登入網路銀行。\n2. 清理手機內部分簡訊，確保有足夠簡訊容量可接收OTP簡訊。\n3. 確認手機收訊良好。\n4. 將SIM卡換到另一隻手機，並再次登入網路銀行。</string>
    <string name="otp_hint_3">如依以上步驟仍無法收到簡訊動態密碼(SMS OTP)，請與本行客戶服務中心聯繫(電話 : 02-6612-9889)</string>
    <string name="card_detail_title">卡片詳情</string>
    <string name="card_detail_name">DBS VISA 飛行卡</string>
    <string name="card_detail_introduction">	1.	週一～週四：全票 66 折；平假日中杯可樂 + 小份爆特惠價 NT$ 80。\n
	2.	刷卡即享 2X DBS$ (NT$ 6 = 1哩) 及海外刷卡 3X DBS$ (NT$ 4 = 1哩)。\n
	3.	無限現金回贈，DBS VISA 飛行卡。成功申請享高達HK$1,000現金獎賞！\n
	4.	刷卡即享 2X DBS$ (NT$ 6 = 1哩) 及海外刷卡 3X DBS$ (NT$ 4 = 1哩)。\n
	5.	無限現金回贈，DBS VISA 飛行卡。成功申請享高達HK$1,000現金獎賞！</string>
    <string name="btn_more_detail"><u>更多詳情</u></string>
    <string name="dialog_btn_enter">送出</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters_number_capital_only">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="only_number_capital_only">0123456789</string>
    <string name="characters_number_letter_only">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="userid_format_regular_expression">[A-Z]{1}[0-9]{9}</string>
    <string name="resident_permit_format_regular_expression">[A-Z]{2}[0-9]{8}</string>
    <string name="password_format_regular_expression">.{6}</string>
    <string name="sv_password_format_regular_expression">.{6,16}</string>
    <string name="sv_username_format_regular_expression">.{6,16}</string>
    <string name="cellphone_format_regular_expression">09[0-9]{8}</string>
    <string name="exchange_text">兌換</string>
    <string name="not_yet_bill_amount">未出帳單</string>
    <string name="flight_miles">飛行基金</string>
    <string name="dividend_points">活利積分</string>
    <string name="cash_points">現金點數</string>
    <string name="credit_card_not_enable_message">立即開卡 ∙ 立享優惠</string>
    <string name="card_type_main">主卡</string>
    <string name="card_type_attached">附卡</string>
    <string name="home_nickname_format">Hi %s</string>
    <string name="credit_card_no_yet_bill_detail">未出帳單消費明細</string>
    <string name="home_note_message_has_pay">您本期帳單金額為%1$s, 已繳款金額為%2$s, 繳款截止日為%3$s。</string>
    <string name="home_note_message_timeout">您本期帳單金額為%1$s, 已繳款金額為%2$s, 請立即繳款。</string>
    <string name="home_note_message_not_pay">您本期帳單金額為%1$s, 繳款截止日為%2$s。</string>
    <string name="forgot_account_and_password">忘記 帳號 或 密碼？</string>
    <string name="save_user_account">記住使用者帳號</string>
    <string name="online_registration">線上註冊</string>
    <string name="online_pay_bills">線上繳款</string>
    <string name="online_bid_card">申辦信用卡</string>
    <string name="online_active_card">線上開卡</string>
    <string name="login_title">DBS Omni</string>
    <string name="login_subtitle">行動信用卡理財</string>
    <string name="change_user">切換使用者帳號</string>
    <string name="reLogin_nickname_format">Hi %s,</string>
    <string name="change_user_device_message">將變更約定的裝置</string>
    <string name="register_header">立即註冊</string>
    <string name="register_result_pass_header_top">您已成功</string>
    <string name="register_result_pass_header_down">完成註冊</string>
    <string name="register_result_fail_header_top">註冊</string>
    <string name="register_result_fail_header_down">未成功</string>
    <string name="user_id_title">身分證字號 / 居留證號碼</string>
    <string name="account_type_dbs_title">【所有卡友適用】信用卡號註冊</string>
    <string name="account_type_anz_title">【原澳盛卡友專用】網銀使用者代號註冊</string>
    <string name="anz_account_user_id">原澳盛信用卡網銀使用者代號</string>
    <string name="date_of_birth">生日</string>
    <string name="date_format_of_birth">YYYY/MM/DD</string>
    <string name="checker_agree_notes_and_terms">本人已詳閱並同意注意事項及條款</string>
    <string name="register_content_title">註冊內容</string>
    <string name="register_content_for_anz_title">原澳盛銀行 - 網銀使用者代號註冊</string>
    <string name="input_text">輸入</string>
    <string name="effective_date">有效期限</string>
    <string name="effective_date_hint">MM/YY</string>
    <string name="credit_card_number_title">信用卡卡號</string>
    <string name="credit_card_number_hint">•••• •••• •••• ••••</string>
    <string name="user_nickname_hint">(選填)</string>
    <string name="user_nickname_title">使用者暱稱</string>
    <string name="transaction_date">交易日期</string>
    <string name="entry_date">入帳日期</string>
    <string name="credit_card_active_mima">開卡密碼</string>
    <string name="credit_card_active_time">開卡時間</string>
    <string name="active_success">您已完成</string>
    <string name="account_length_limit">請輸入6~15 碼英數字。</string>
    <string name="account_can_not_for_user_id_limit">不可為身份證字號或外國人統一證號。</string>
    <string name="account_can_not_only_number_limit">不可單純由數字組成。</string>
    <string name="account_can_not_same_or_continuous_number_or_word_limit">不可設定為相同或連續英文字或數字。</string>
    <string name="account_can_not_same_mima_limit">不可與密碼相同。</string>
    <string name="account_can_not_set_specialsymbols_or_blanks">不可設定特殊符號或空白。</string>
    <string name="mina_length_and_other_limit">請輸入6~30 碼英數字。</string>
    <string name="mima_upper_not_equal_to_lower">大小寫不同。</string>
    <string name="mima_not_has_same_and_continuous_char">不可含3個以上相同或連續隻數字或英文字。</string>
    <string name="mina_can_not_same_account_limit">不可與使用者帳號相同。</string>
    <string name="tuochid_note_message">提醒您！為維護您的權益，啟用 Touch ID 登入 Lifestyle APP 請先確保您的 Touch ID 設定為您本人所有。</string>
    <string name="result_personal_service_apply_credit_card_textup">您的信用卡申辦</string>
    <string name="result_personal_service_account_modify_textup">您的使用者帳號</string>
    <string name="result_personal_service_password_modify_textup">您的使用者密碼</string>
    <string name="result_personal_service_email_modify_textup">您的電子信箱</string>
    <string name="result_personal_service_phone_modify_textup">您的手機號碼</string>
    <string name="result_personal_service_address_modify_textup">您的通訊地址</string>
    <string name="result_personal_service_data_modify_textdown_pass">成功更新完成!</string>
    <string name="result_personal_service_data_modify_textdown_fail">更新未完成</string>
    <string name="result_personal_service_apply_credit_card_textdown_pass">完成申請</string>
    <string name="result_personal_service_apply_credit_card_textdown_fail">未成功申請</string>
    <string name="result_payment_textup_pass">您已成功</string>
    <string name="result_payment_textup_fail">繳款</string>
    <string name="result_payment_textdown_pass">完成繳款</string>
    <string name="result_payment_textdown_fail">未成功</string>
    <string name="result_personal_service_account_after_updated">更新後使用者帳號</string>
    <string name="result_personal_service_email_after_updated">更新後電子信箱</string>
    <string name="result_personal_service_address_after_updated">新通訊地址</string>
    <string name="result_personal_service_apply_credit_card_name">申請卡別</string>
    <string name="forget_mima_hint">設定新密碼</string>
    <string name="forget_mima_confirm_hint">再次輸入新密碼</string>
</resources>