<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tw.controller.register.RegisterAccountDataFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 上層 -->
        <LinearLayout
            android:id="@+id/linearLayout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorGrayBackground"
            android:orientation="vertical"
            android:paddingBottom="22dp"
            android:paddingLeft="@dimen/x4"
            android:paddingRight="@dimen/x4"
            android:paddingTop="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CommonText.TransferPanelStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_text" />

                <TextView
                    style="@style/CommonText.TransferPanelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_content_title" />
            </LinearLayout>

        </LinearLayout>


        <!-- 下層固定按鈕 -->
        <LinearLayout
            android:id="@+id/linearLayout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout style="@style/BottomButtonsBackground">

                <Button
                    android:id="@+id/btnNextStep"
                    style="@style/BottomButtonWithBackground"
                    android:text="@string/button_next" />

            </RelativeLayout>

        </LinearLayout>


        <!-- 中間項目 -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/linearLayout_bottom"
            android:layout_below="@+id/linearLayout_top"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x4"
                android:paddingRight="@dimen/x4">

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_mina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputTextType="Password"
                    app:textTitle="@string/user_mima"/>

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_mina_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputTextType="Password"
                    app:textTitle="@string/user_mima_confirm"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/x4">

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/length_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/mina_length_and_other_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/upper_not_equal_to_lower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/mima_upper_not_equal_to_lower"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/not_has_same_and_continuous_char"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/mima_not_has_same_and_continuous_char"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_same_account_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/mina_can_not_same_account_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_set_specialsymbols"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_can_not_set_specialsymbols_or_blanks"/>

                </LinearLayout>

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textTitle="@string/user_nickname_hint"
                    app:inputTextType="NickName"/>

                <Switch
                    android:id="@+id/switchTouchID"
                    style="@style/CommonShowText"
                    android:text="@string/personal_service_list_touch_id" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/x4">

                    <com.dbs.omni.tw.element.SymbolItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/tuochid_note_message"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</FrameLayout>
