<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tw.controller.register.RegisterDBSMainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 上層 -->
        <LinearLayout
            android:id="@+id/linearLayout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorGrayBackground"
            android:orientation="vertical"
            android:paddingBottom="22dp"
            android:paddingLeft="@dimen/x4"
            android:paddingRight="@dimen/x4"
            android:paddingTop="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CommonText.TransferPanelStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_text" />

                <TextView
                    style="@style/CommonText.TransferPanelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_content_title" />
            </LinearLayout>

        </LinearLayout>


        <!-- 下層固定按鈕 -->
        <LinearLayout
            android:id="@+id/linearLayout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x4"
                android:layout_marginLeft="@dimen/x4"
                android:layout_marginTop="@dimen/x2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_agree_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/bg_radio_checkbox" />

                <TextView
                    android:id="@+id/text_agree_notes"
                    style="@style/CommonAgreeText"
                    android:layout_marginLeft="@dimen/x4"
                    android:text="@string/checker_agree_notes_and_terms" />


            </LinearLayout>


            <RelativeLayout style="@style/BottomButtonsBackground">

                <Button
                    android:id="@+id/btnNextStep"
                    android:enabled="false"
                    style="@style/BottomButtonWithBackground"
                    android:text="@string/button_next" />

            </RelativeLayout>

        </LinearLayout>


        <!-- 中間項目 -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/linearLayout_bottom"
            android:layout_below="@+id/linearLayout_top"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x4"
                android:paddingRight="@dimen/x4">

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputTextType="BirthDate"
                    app:textTitle="@string/date_of_birth"/>

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputTextType="CreditCard"
                    app:textTitle="@string/credit_card_number_hint"/>

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_effective_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputTextType="EffectiveDate"
                    app:textTitle="@string/effective_date"/>

                <com.dbs.omni.tw.element.InputTextView
                    android:id="@+id/inputText_account_user_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputTextType="UserAccount"
                    app:textTitle="@string/user_account"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/x4">

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/length_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_length_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_for_user_id_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_can_not_for_user_id_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_only_number_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_can_not_only_number_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_same_or_continuous_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_can_not_same_or_continuous_number_or_word_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_same_mima_limit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_can_not_same_mima_limit"/>

                    <com.dbs.omni.tw.element.SymbolItem
                        android:id="@+id/can_not_set_specialsymbols"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:textContent="@string/account_can_not_set_specialsymbols_or_blanks"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</FrameLayout>
