<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tw.controller.setting.editProfile.changeUserData.AccountModifyFragment"
    android:focusableInTouchMode="true">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x4"
            android:paddingRight="@dimen/x4"
            android:orientation="vertical">

            <com.dbs.omni.tw.element.InputTextView
                android:id="@+id/inputTextView_OldAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:inputTextType="Display">
            </com.dbs.omni.tw.element.InputTextView>

            <!--<EditText-->
                <!--android:id="@+id/edtNewAccount"-->
                <!--style="@style/CommonInputEditText"-->
                <!--android:ems="10"-->
                <!--android:inputType="textPersonName"-->
                <!--android:hint="@string/input_new_account"/>-->

            <com.dbs.omni.tw.element.InputTextView
                android:id="@+id/inputText_NewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:inputTextType="UserAccount">
            </com.dbs.omni.tw.element.InputTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/x4">

                <com.dbs.omni.tw.element.SymbolItem
                    android:id="@+id/length_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textContent="@string/account_length_limit"/>

                <com.dbs.omni.tw.element.SymbolItem
                    android:id="@+id/can_not_for_user_id_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textContent="@string/account_can_not_for_user_id_limit"/>

                <com.dbs.omni.tw.element.SymbolItem
                    android:id="@+id/can_not_only_number_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textContent="@string/account_can_not_only_number_limit"/>

                <com.dbs.omni.tw.element.SymbolItem
                    android:id="@+id/can_not_same_or_continuous_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textContent="@string/account_can_not_same_or_continuous_number_or_word_limit"/>

                <com.dbs.omni.tw.element.SymbolItem
                    android:id="@+id/can_not_same_mima_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textContent="@string/account_can_not_same_mima_limit"/>

                <com.dbs.omni.tw.element.SymbolItem
                    android:id="@+id/can_not_set_specialsymbols"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textContent="@string/account_can_not_set_specialsymbols_or_blanks"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            style="@style/BottomButtonsBackground">

            <Button
                android:id="@+id/btnNextStep"
                style="@style/BottomButtonWithBackground"
                android:text="@string/button_next" />

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
